# human-origin

./: .gitignore  CLAUDE.md  README.md  bump_version.mjs  index.html  package-lock.json  package.json
.github/workflows/: build-sidecars-windows.yml  build-windows-app-test.yml  build.yml  notarize-test.yml  release.yml
docs/: CLOUD_ACTIVATION_RUNBOOK.md  EXPORT_PACKAGE_WORKFLOW.md  HO_JSON_v1_SPEC.md  HUMANORIGIN_CARTOUCHE_DIMENSIONS.md  HUMANORIGIN_CARTOUCHE_STANDARD.md  HUMANORIGIN_SERVER_ATTESTATION_SPEC.md  HUMANORIGIN_UX_CHECKPOINT_20260512_170839.md  PROOF_REGISTRY_P0.md  SERVER_COUNTERSIGN_P0.md
docs/controlled_macos_release/: beta_invitation_en.md  beta_invitation_fr.md  first_tester_send_pack_fr.md  internal_release_checklist_fr.md  macos_install_guide_fr.md  macos_test_scenario_fr.md  tester_feedback_form_fr.md
docs/public_release/: creator_guide_v1.md  demo_packages_plan_v1.md  faq_v1.md  installation_macos_v1.md  landing_page_v1.md  launch_message_v1.md  recipient_guide_v1.md
humanorigin-server/: .env  package-lock.json  package.json  server.js  vite.config.js
src/: config.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: humanorigin-converter-aarch64-apple-darwin
src-tauri/icons/: icon.icns
src-tauri/src/: drafts.rs  lib.rs  main.rs  network.rs  publication_core.rs
src/converter/: Cargo.toml
src/converter/src/: main.rs
src/publisher/: Cargo.toml
src/publisher/src/: job.rs  main.rs  pdf_publish.rs  result.rs
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/functions/countersign-proof/: index.ts
supabase/functions/proof-registry/: index.ts
supabase/functions/sign-cert/: index.ts
supabase/migrations/: 20260608000000_create_proofs_table.sql
tools/: check_all.sh  clean_latest_export_package.py  elevate_open_first_scope_latest.py  enhance_latest_open_first.py  enhance_open_first_latest.py  inject_record_verification_url.py  object_evidence_report_latest.sh  patch_latest_export_package.py  post_export_latest.sh  redirect_published_html_to_open_first.py  redteam_latest_export.sh  reframe_public_bundle.py  smoke_latest_export.sh  ux_add_recipient_guide_latest.py  ux_create_send_zip_latest.py  ux_finalize_latest_package.py  ux_fix_latest_package_proof.py  ux_static_surface_report.py
