[package]
name = "human-origin"
version = "0.1.0"
description = "HumanOrigin Core V1"
authors = ["Philippe"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# --- TAURI ---
tauri = { version = "1", features = [ "window-all", "fs-all", "protocol-all", "http-all", "path-all", "dialog-all", "shell-open" ] }
tauri-plugin-deep-link = "0.1"

# --- DATA ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# --- SYSTEM (keyboard/mouse + dirs) ---
device_query = "0.2"
dirs = "5.0"

# --- CRYPTO (device signature + drafts encryption) ---
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }

aes-gcm = "0.10"
keyring = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
