[package]
name = "human-origin"
version = "0.1.19"
description = "HumanOrigin Core V1"
authors = ["Philippe"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# --- TAURI ---
tauri = { version = "1", features = [ "shell-sidecar",
  "process-all",
  "updater",
  "window-all",
  "fs-all",
  "protocol-all",
  "http-all",
  "path-all",
  "dialog-all",
  "shell-open",
  "shell-execute"
] }
tauri-plugin-deep-link = "0.1"

# --- DATA ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# --- SYSTEM (keyboard/mouse + dirs) ---
device_query = "4.0.1"
dirs = "5.0"

# --- CRYPTO (device signature + drafts encryption) ---
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }

aes-gcm = "0.10"
keyring = "2"

# ✅ MAC PERMISSIONS (Accessibilité / AX)
# Dépendance déplacée dans la section macOS-only plus bas.

# --- HASH (document binding / verifier) ---
sha2 = "0.10"

# --- SVG -> PNG RENDERING (Publication Kit) ---
resvg = "0.44"

# --- PUBLICATION PDF NATIVE ---

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.2"

image = "0.25"
pdfium-render = "0.8.37"
pdfium-auto = "0.3.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
