[package]
name = "humanorigin-publisher"
version = "0.1.0"
edition = "2021"
default-run = "humanorigin-publisher"

[[bin]]
name = "humanorigin-publisher"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
pdfium-render = "0.8.37"
pdfium-auto = "0.3.0"